zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/address_utxo_data@mainnet_2.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
expression: stored_address_utxos
---
[
  ("t3Vz22vK5z2LcKEdg16Yv4FFneEL1zg9ojd", [
    Utxo(
      output: Output(
        value: Amount(12500),
        lock_script: Script("a9147d46a730d31f97b1930d3368a967c309bd4d136a87"),
      ),
      height: Height(1),
      from_coinbase: true,
    ),
    Utxo(
      output: Output(
        value: Amount(25000),
        lock_script: Script("a9147d46a730d31f97b1930d3368a967c309bd4d136a87"),
      ),
      height: Height(2),
      from_coinbase: true,
    ),
  ]),
]
