zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshots/address_utxo_data@testnet_1.snap
---
source: zebra-state/src/service/finalized_state/zebra_db/block/tests/snapshot.rs
expression: stored_address_utxos
---
[
  ("t2UNzUUx8mWBCRYPRezvA363EYXyEpHokyi", [
    Utxo(
      output: Output(
        value: Amount(12500),
        lock_script: Script("a914ef775f1f997f122a062fff1a2d7443abd1f9c64287"),
      ),
      height: Height(1),
      from_coinbase: true,
    ),
  ]),
]
